<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_selection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/select"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"

                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/line2_1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="90"


                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_triangle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="5dp"

                        android:src="@drawable/main_img_triangle" />

                    <ImageView
                        android:id="@+id/img_square"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:src="@drawable/main_img_square" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line2_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_triangle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"

                        android:gravity="center"

                        android:text="@string/triangle"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_square"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center"

                        android:text="@string/square"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:orientation="vertical"
                android:layout_marginBottom="100dp">

                <LinearLayout
                    android:id="@+id/line3_1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="90"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_trapeze"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingEnd="5dp"
                        android:src="@drawable/main_img_trapeze" />

                    <ImageView
                        android:id="@+id/img_circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="5dp"
                        android:src="@drawable/main_img_square" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line3_2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="15"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_trapeze"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/trapeze"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_circle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:text="@string/circle"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>