<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_background_universal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background" />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_universal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="80"


                android:src="@drawable/main_img_triangle" />

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="20"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_area"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/area"
                    android:textAllCaps="false"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text_result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="27sp"
                     />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="C"
                    android:gravity="center"
                    android:background="@drawable/button_stroke_firebrick_press_darkred"
                    android:textColor="@color/white"
                    android:textSize="20sp"


                    app:srcCompat="@android:drawable/ic_popup_sync" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/line2_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/parameter1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="Параметр 1"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/edit_1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="35"
                            android:background="@color/white10"
                            android:ems="5"
                            android:gravity="end"
                            android:inputType="numberDecimal"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white95"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/parameter2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="Параметр 2"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/edit_2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="35"
                            android:background="@color/white10"
                            android:ems="5"
                            android:gravity="end"
                            android:inputType="numberDecimal"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/parameter3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="Параметр 3"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/edit_3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="35"
                            android:background="@color/white10"
                            android:ems="5"
                            android:gravity="end"
                            android:inputType="numberDecimal"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/line4_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/parameter4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:text="Параметр 4"
                            android:textAlignment="textStart"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/edit_4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="35"
                            android:background="@color/white10"
                            android:ems="5"
                            android:gravity="end"
                            android:inputType="numberDecimal"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/level3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:background="@drawable/button_stroke_graydim_press_graydark"
                android:padding="10dp"
                android:text="@string/detailed"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="33"
                android:background="@drawable/button_stroke_dreen50_press_green95"
                android:padding="10dp"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_back_cal1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:background="@drawable/button_stroke_graydim_press_graydark"
                android:padding="10dp"
                android:text="@string/back"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>